<resources>
    <string name="app_name">WMSLite(test)</string>
    <string name="sign_in_title">Current profile: </string>
    <string name="sign_in_login">Login</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="sign_in_qr_btn">Sign in by QR</string>
    <string name="crash_toast_text">Error! Sending report</string>
    <string name="login_spinner_header">Login</string>
    <string name="btn_base_settings_scan_qr">Scan QR</string>
</resources>