<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_main"
        style="Widget.MaterialComponents.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="Авториация"
            app:titleMarginStart="32dp"
            app:titleTextAppearance="?attr/textAppearanceHeadline6">
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <!--<ImageView
                android:id="@+id/iv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"/>-->

            <TextView
                android:id="@+id/tv_main_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WMSLite v1.0.0"
                app:layout_constraintBottom_toTopOf="@+id/tv_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp"/>

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/sign_in_title"
                android:textSize="24sp"

                app:layout_constraintTop_toBottomOf="@id/tv_main_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:layout_marginTop="48dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="42dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp">
                <EditText
                    android:id="@+id/et_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_login"
                    android:imeOptions="actionNext"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/til_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="42dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:visibility="gone">
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"/>


            <Button
                android:id="@+id/btn_sign_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Настройки"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="42dp"
                android:layout_marginEnd="42dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</LinearLayout>